# desc-prod

./: .gitignore  README.md  setup.cfg  version.txt
apps/: runapp-parsltest
apps/parsltest/: runapp-parsltest
apps/pmb/: pmb-submit  pmb-wrap  runapp-pmb  runapp-pmbs
cert/: make-cert
descprod/: __init__.py  add_job.py  build-this  check_job_schema.py  config.py  descprod-get-stderr  descprod-get-stdout  descprod-output-dir  descprod-wrap  get_job.py  job_table.py  jobs.py  start_job.py  users.py  utils.py
doc/: apps.md  configs.md
docker/descprod/: README.md  attach  build  dockerfile-01  dockerfile-02  dockerfile-03  dockerfile-05  dockerfile-06  dockerfile-07  dockerfile-09  dockerfile-10  push  start  start-server  stop
docker/gen3workflow/: .gitignore  README.md  clean  dockerfile-00  dockerfile-01  dockerfile-02  dockerfile-03  dockerfile-04  push  start
docker/parsltest/: README.md  attach  dockerfile-01  dockerfile-02  dockerfile-03  dockerfile-04  dockerfile-05  dockerfile-06  dockerfile-07  dockerfile-08  dockerfile-10  dockerfile-11  dockerfile-12  nersc-proxy  start  stop
examples/: runapp-mysleep
nersc-spin/: README  descprod-20230928.yaml  descprod-20240918-final.yaml  descprod-jupyter-20240918-final.yaml  dptest-20240918-final.yaml
pmb/: pmb-submit  runapp-pmb
ptenv/: README.md  ptenv-config  ptenv-create  ptenv-dir  ptenv-find  ptenv-name  ptenv-remove  ptenv-setup  ptenv-shell  ptenv-versions
server/: app.py  descprod-adduser  descprod-get-parsl-port  descprod-next-jobid  descprod-next-sessionid  descprod-setup-ssh  descprod-wrap  install  jupyter_notebook_config.py  l  run-jupyter  run-server  setup.sh  sfapi  sfapi.py  show-open-ports  start  start-dptest
server/descprod/: __init__.py  job_table.py  jobs.py  users.py  utils.py
server/skel/: .bashrc
server/static/: main.css
server/templates/: help.html
test/: app.py  run-server
test/templates/: index.html  table.html
worker/: worker-getip  worker-ipname  worker-local  worker-port  worker-start  worker-submit
