[metadata]
name = desc-prod
version = 0.3.19.dev2
author = David Adams
author_email = dladams@bnl.gov
description = 'DESC production server and tools'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/desc-prod
project_urls =
    Bug Tracker = https://github.com/LSSTDESC/desc-wprodissues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    mysql-connector-python
    pandas
scripts = 
    descprod/descprod-wrap

[options.packages.find]

[options.entry_points]
console_scripts =
    descprod-version=descprod:version
    descprod-get-job=descprod:get_job_main
    descprod-start-job=descprod:start_job_main
