[metadata]
name = desc-prod
version = 0.3.47
author = David Adams
author_email = dladams@bnl.gov
description = 'DESC production server and tools'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/desc-prod
project_urls =
    Bug Tracker = https://github.com/LSSTDESC/desc-wprodissues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    mysql-connector-python
    pandas
    psutil
scripts = 
    descprod/descprod-wrap
    ptenv/ptenv-create
    ptenv/ptenv-config
    ptenv/ptenv-name
    ptenv/ptenv-dir
    ptenv/ptenv-find
    ptenv/ptenv-remove
    ptenv/ptenv-setup
    ptenv/ptenv-shell
    ptenv/ptenv-versions
    apps/runapp-parsltest
    pmb/pmb-submit
    pmb/runapp-pmb

[options.packages.find]

[options.entry_points]
console_scripts =
    descprod-version=descprod:version
    descprod-get-job=descprod:get_job_main
    descprod-start-job=descprod:start_job_main
    descprod-add-job=descprod:add_job_main
    descprod-split-config-field=descprod:split_config_field_main
    descprod-split-config=descprod:split_config_main
    descprod-split-compound-config=descprod:split_compound_config_main
